--- a/demo/ui.html
+++ b/demo/ui.html
@@ -28,13 +28,13 @@
 <body>
     <div>
         <label for="quantity" class="block mb-4">Quantity</label>
-        <div class="@uiNum flex" data-max="9">
-            <div data-btn="minus" class="flex items-center justify-center border p-4 cursor-pointer">-</div>
+        <div class="@number flex" data-max="9">
+            <div class="@btn-minus flex items-center justify-center border p-4 cursor-pointer">-</div>
             <input class="p-4" min="1" max="9" name="quantity" value="1" type="number" />
-            <div data-btn="plus" class="flex items-center justify-center border p-4 cursor-pointer">+</div>
+            <div class="@btn-plus flex items-center justify-center border p-4 cursor-pointer">+</div>
         </div>
     </div>
 
-    <script src="../global/ui.js"></script>
+    <script src="../interface/Number/Number.js"></script>
 </body>
 </html>
